--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -31,7 +31,7 @@
   --hover-text-color: #ffffff;
 }
 
-body.dark-theme {
+html.dark-theme {
   --body-color: #1a1a2e;
   --text-color: #d0d0d0;
   --border-color: #2d2d3a;
